--- a/less/home-page.less
+++ b/less/home-page.less
@@ -46,6 +46,10 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      display: block;
+    }
+
     .walk-text {
       width: 50%;
 
