--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,7 +32,7 @@
     .nav {
       display: flex;
       justify-content: space-evenly;
-      margin: 20px 335px;
+      margin: 20px 225px;
 
       @media @mobile {
         width: 100%;
